--- a/OrderBlaze/Components/_Imports.razor
+++ b/OrderBlaze/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using OrderBlaze
 @using OrderBlaze.Components
 @using Models
+@using OrderBlaze.Components.Pages.OrderBlazor.OrderBlazorComponents
