--- a/OrderBlaze/Components/Pages/OrderBlazor/DemoProduct.razor
+++ b/OrderBlaze/Components/Pages/OrderBlazor/DemoProduct.razor
@@ -20,15 +20,23 @@
                     }
                 }
                 <br />
-                <input type="button" class="btn btn-danger mt-2" style="width:100px" value="Delete"/>
+                <_DeleteButtonComponent ProductId="@prod.Id">
+
+                </_DeleteButtonComponent>
             </div>
         }
+    </div>
+    <div class="row">
+        <input type="button" class="btn btn-success" style="width:100px" value="Counter" @onclick="()=>IncrementCount(5)" />
+        Counter: @Count
     </div>
 </div>
 
 @code {
 
     List<Product> ProductList = new();
+    public int Count;
+
 
     protected override void OnInitialized()
     {
@@ -60,5 +68,9 @@
             }
             });
     }
-}
 
+    private void IncrementCount(int counter)
+    {
+        Count+=counter;
+    }
+}
