--- a/OrderBlaze/Components/Layout/NavMenu.razor
+++ b/OrderBlaze/Components/Layout/NavMenu.razor
@@ -27,15 +27,26 @@
         </div>
 
         <div class="nav-item px-3">
-            <a class="nav-link" href="/orderBlaze/bindprop">
+            <NavLink class="nav-link" href="/orderBlaze/bindprop">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Bind Prop
-            </a>
+            </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <a class="nav-link" href="/orderBlaze/demoProduct">
+            <NavLink class="nav-link" href="/orderBlaze/demoProduct">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Demo Product
-            </a>
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/orderBlaze/parentComponent">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Parent / Child Relations
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="orderRouting?Param2=Order&Param3=Routing" Match="NavLinkMatch.Prefix">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Routing
+            </NavLink>
         </div>
     </nav>
 </div>
