--- a/OrderBlaze/Components/Layout/NavMenu.razor
+++ b/OrderBlaze/Components/Layout/NavMenu.razor
@@ -8,6 +8,7 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
@@ -43,11 +44,19 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Parent / Child Relations
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="orderRouting?Param2=Order&Param3=Routing" Match="NavLinkMatch.Prefix">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Routing
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/blazorjs">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Blazor JS
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
