--- a/OrderBlaze/Components/_Imports.razor
+++ b/OrderBlaze/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using OrderBlaze.Components
 @using Models
 @using OrderBlaze.Components.Pages.OrderBlazor.OrderBlazorComponents
+@using OrderBlaze.Helper
